backend/node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  namespace: stellar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-node-app
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
      - name: my-node-app
        image: https://git.66bit.ru/internship-2025/school-timeplanner/school-timeplanner/container_registry/274:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
        - name: my-application-secret
