backend/node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  namespace: stellar
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
  selector:
    app: my-node-app
