backend/node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-node-ingress
  namespace: stellar
spec:
  ingressClassName: nginx
  rules:
    - host: "node.stk8s.66bit.ru"
      http:
        paths:
          - pathType: Prefix
            path: /webhook
            backend:
              service:
                name: my-node-app-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /schedule
            backend:
              service:
                name: my-node-app-service
                port:
                  number: 3000
